--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,7 +5,7 @@ builds:
     env:
       - CGO_ENABLED=0
     ldflags:
-      - -s -w
+      - -s -w -X github.com/cyrilghali/metro-cli/cmd.Version={{.Version}}
     goos:
       - linux
       - darwin
