--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           go-version: "1.26"
 
       - name: Build
-        run: go build -o metro-cli .
+        run: go build -o metro ./cmd/metro
 
       - name: Test
         run: go test -v -race ./...
