--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -18,13 +18,17 @@ jobs:
       - name: Get latest tag
         id: latest
         run: |
-          tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
           echo "tag=$tag" >> "$GITHUB_OUTPUT"
 
-      - name: Bump patch version
+      - name: Bump version
         id: bump
         run: |
           tag="${{ steps.latest.outputs.tag }}"
+          if [ -z "$tag" ]; then
+            echo "new=v0.1.0" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
           # Strip leading 'v'
           version="${tag#v}"
           IFS='.' read -r major minor patch <<< "$version"
